Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65545

When the browser window is resized it is not updating the streamed application

    XMLWordPrintable

Details

    • bbd954a374907d62d97bbd42add263923201898e

    Description

      When the browser window is resized it is not updating the streamed application, so even though the application (when shown on the desktop) would resize to take the new window size. It does not happen when inside the browser.

      This can be reproduced with the text example in qtdeclarative/examples/quick

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jefernan Jesus Fernandez
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes