Fix browser resize

The application was not sending the notification to the browser to
resize the canvas. The browser was notifying the application of the
resize but the application was not acting on window resize.

Task-number: QTBUG-65545
Change-Id: I1ebe3b45c80b8275c74e1e39de3e1a780b953e26
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>